--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "persistantstorageapp",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "author": "Matthew Croak",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.28",
