added demo gif to README as well as repo data and description to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "author": "Matthew Croak",
+  "description": "This is a React Native app meant to demonstrate how to utilize methods for persisting data beyond local state.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/macro6461/persistantStorageApp.git",
+    "baseUrl": "https://github.com/macro6461/persistantStorageApp"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
